# linkedLists

./: CMakeLists.txt
inc/: LinkedList.h
src/: LinkedList.c  main.c
